redis.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: redis
  name: redis
spec:
  clusterIP: None
  ports:
  - name: redis
    port: 6379
    targetPort: 0
  selector:
    io.kompose.service: redis
status:
  loadBalancer: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  creationTimestamp: null
  name: redis
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: redis
    spec:
      containers:
      - image: wodby/redis:4.0-2.1.4
        name: redis
        resources: {}
      restartPolicy: Always
status: {}
