ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: wp-ingress
spec:
  rules:
  - host: wordpress.local
    http:
      paths:
      - path: /
        backend:
          serviceName: varnish-svc
          servicePort: 80
